--- a/AC14HTML-day05homework/index.css
+++ b/AC14HTML-day05homework/index.css
@@ -257,11 +257,12 @@ nav ul li:hover{
 
 
 section.news{
+    position: relative;
     margin: auto;
     padding-bottom: 124px;
     display: flex;
     flex-direction: column;
-    background-color: #F9FAFB;
+    z-index: 1;
     /* background-color: #ccc; */
 }
 .news h1{
@@ -310,6 +311,17 @@ section.news .content{
 .short-course{
     color: white;
     background-color: #29303E;
+}
+.short-course::before{
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 180px;
+    margin-top: -179px;
+    background-color: #29303E;
+    clip-path: polygon(33% 0%, 100% 100%, 0% 100%);
+    /* z-index: -2; */
 }
 .short-course > div{
     width: 1440px;
@@ -372,14 +384,22 @@ section.news .content{
     height: 100%;
     /* border: 1px solid wheat; */
 }
-.short-course .course-carousel .course-introduction h3{
-
-}
 
 
 .recent-courses{
     background-color: rgb(41, 48, 62);
     padding-top: 70px;
+}
+.recent-courses::after{
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 180px;
+    margin-bottom: 179px;
+    background-color: #29303E;
+    clip-path: polygon(0% 0%, 67% 100%, 100% 0%);
+    /* z-index: -2; */
 }
 .recent-courses h1{
     width: 1440px;
@@ -432,10 +452,18 @@ section.news .content{
     margin-top: 30px;
     /* 因為下面自適應寬度 */
 }
+.recent-courses span{
+    
+}
+.recent-courses p{
+    display: flex;
+    justify-content: space-between;
+}
 
 .planning-path-courses{
     width: 960px;
     margin: auto;
+    margin-top: 180px;
     display: flex;
     flex-direction: column;
 }
